src/TreeGrammar/CMinusParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g 2012-03-07 22:22:43

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class CMinusParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARG", "FUNC", "ID", "INT", "SLIST", "VAR", "WS", "'!='", "'('", "')'", "'*'", "'+'", "','", "';'", "'='", "'=='", "'char'", "'for'", "'int'", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int T__11=11;
	public const int T__12=12;
	public const int T__13=13;
	public const int T__14=14;
	public const int T__15=15;
	public const int T__16=16;
	public const int T__17=17;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int ARG=4;
	public const int FUNC=5;
	public const int ID=6;
	public const int INT=7;
	public const int SLIST=8;
	public const int VAR=9;
	public const int WS=10;

	public CMinusParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public CMinusParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return CMinusParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:15:8: public program : ( declaration )+ ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> declaration1 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(15, 4);
		try
		{
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:16:5: ( ( declaration )+ )
			DebugEnterAlt(1);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:16:9: ( declaration )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(16, 9);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:16:9: ( declaration )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==20||LA1_0==22))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:16:9: declaration
					{
					DebugLocation(16, 9);
					PushFollow(Follow._declaration_in_program67);
					declaration1=declaration();
					PopFollow();

					adaptor.AddChild(root_0, declaration1.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(17, 4);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_declaration();
	partial void LeaveRule_declaration();

	// $ANTLR start "declaration"
	// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:19:1: declaration : ( variable | function );
	[GrammarRule("declaration")]
	private AstParserRuleReturnScope<object, IToken> declaration()
	{
		EnterRule_declaration();
		EnterRule("declaration", 2);
		TraceIn("declaration", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> variable2 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> function3 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "declaration");
		DebugLocation(19, 4);
		try
		{
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:20:5: ( variable | function )
			int alt2=2;
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==20||LA2_0==22))
			{
				int LA2_1 = input.LA(2);

				if ((LA2_1==ID))
				{
					int LA2_2 = input.LA(3);

					if ((LA2_2==17))
					{
						alt2 = 1;
					}
					else if ((LA2_2==12))
					{
						alt2 = 2;
					}
					else
					{
						NoViableAltException nvae = new NoViableAltException("", 2, 2, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:20:9: variable
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(20, 9);
				PushFollow(Follow._variable_in_declaration87);
				variable2=variable();
				PopFollow();

				adaptor.AddChild(root_0, variable2.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:21:9: function
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(21, 9);
				PushFollow(Follow._function_in_declaration97);
				function3=function();
				PopFollow();

				adaptor.AddChild(root_0, function3.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("declaration", 2);
			LeaveRule("declaration", 2);
			LeaveRule_declaration();
		}
		DebugLocation(22, 4);
		} finally { DebugExitRule(GrammarFileName, "declaration"); }
		return retval;

	}
	// $ANTLR end "declaration"

	partial void EnterRule_variable();
	partial void LeaveRule_variable();

	// $ANTLR start "variable"
	// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:24:1: variable : type ID ';' -> ^( VAR type ID ) ;
	[GrammarRule("variable")]
	private AstParserRuleReturnScope<object, IToken> variable()
	{
		EnterRule_variable();
		EnterRule("variable", 3);
		TraceIn("variable", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken ID5 = default(IToken);
		IToken char_literal6 = default(IToken);
		AstParserRuleReturnScope<object, IToken> type4 = default(AstParserRuleReturnScope<object, IToken>);

		object ID5_tree = default(object);
		object char_literal6_tree = default(object);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_17=new RewriteRuleITokenStream(adaptor,"token 17");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		try { DebugEnterRule(GrammarFileName, "variable");
		DebugLocation(24, 4);
		try
		{
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:25:5: ( type ID ';' -> ^( VAR type ID ) )
			DebugEnterAlt(1);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:25:9: type ID ';'
			{
			DebugLocation(25, 9);
			PushFollow(Follow._type_in_variable116);
			type4=type();
			PopFollow();

			stream_type.Add(type4.Tree);
			DebugLocation(25, 14);
			ID5=(IToken)Match(input,ID,Follow._ID_in_variable118);  
			stream_ID.Add(ID5);

			DebugLocation(25, 17);
			char_literal6=(IToken)Match(input,17,Follow._17_in_variable120);  
			stream_17.Add(char_literal6);



			{
			// AST REWRITE
			// elements: type, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 25:21: -> ^( VAR type ID )
			{
				DebugLocation(25, 24);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:25:24: ^( VAR type ID )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(25, 26);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(VAR, "VAR"), root_1);

				DebugLocation(25, 30);
				adaptor.AddChild(root_1, stream_type.NextTree());
				DebugLocation(25, 35);
				adaptor.AddChild(root_1, stream_ID.NextNode());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("variable", 3);
			LeaveRule("variable", 3);
			LeaveRule_variable();
		}
		DebugLocation(26, 4);
		} finally { DebugExitRule(GrammarFileName, "variable"); }
		return retval;

	}
	// $ANTLR end "variable"

	partial void EnterRule_type();
	partial void LeaveRule_type();

	// $ANTLR start "type"
	// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:28:1: type : ( 'int' | 'char' );
	[GrammarRule("type")]
	private AstParserRuleReturnScope<object, IToken> type()
	{
		EnterRule_type();
		EnterRule("type", 4);
		TraceIn("type", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set7 = default(IToken);

		object set7_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(28, 4);
		try
		{
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:28:5: ( 'int' | 'char' )
			DebugEnterAlt(1);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(28, 5);

			set7=(IToken)input.LT(1);
			if (input.LA(1)==20||input.LA(1)==22)
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set7));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type", 4);
			LeaveRule("type", 4);
			LeaveRule_type();
		}
		DebugLocation(30, 4);
		} finally { DebugExitRule(GrammarFileName, "type"); }
		return retval;

	}
	// $ANTLR end "type"

	partial void EnterRule_function();
	partial void LeaveRule_function();

	// $ANTLR start "function"
	// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:32:1: function : type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block -> ^( FUNC type ID ( formalParameter )* block ) ;
	[GrammarRule("function")]
	private AstParserRuleReturnScope<object, IToken> function()
	{
		EnterRule_function();
		EnterRule("function", 5);
		TraceIn("function", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken ID9 = default(IToken);
		IToken char_literal10 = default(IToken);
		IToken char_literal12 = default(IToken);
		IToken char_literal14 = default(IToken);
		AstParserRuleReturnScope<object, IToken> type8 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> formalParameter11 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> formalParameter13 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block15 = default(AstParserRuleReturnScope<object, IToken>);

		object ID9_tree = default(object);
		object char_literal10_tree = default(object);
		object char_literal12_tree = default(object);
		object char_literal14_tree = default(object);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_16=new RewriteRuleITokenStream(adaptor,"token 16");
		RewriteRuleITokenStream stream_13=new RewriteRuleITokenStream(adaptor,"token 13");
		RewriteRuleITokenStream stream_12=new RewriteRuleITokenStream(adaptor,"token 12");
		RewriteRuleSubtreeStream stream_formalParameter=new RewriteRuleSubtreeStream(adaptor,"rule formalParameter");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		try { DebugEnterRule(GrammarFileName, "function");
		DebugLocation(32, 4);
		try
		{
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:33:5: ( type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block -> ^( FUNC type ID ( formalParameter )* block ) )
			DebugEnterAlt(1);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:33:9: type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block
			{
			DebugLocation(33, 9);
			PushFollow(Follow._type_in_function174);
			type8=type();
			PopFollow();

			stream_type.Add(type8.Tree);
			DebugLocation(33, 14);
			ID9=(IToken)Match(input,ID,Follow._ID_in_function176);  
			stream_ID.Add(ID9);

			DebugLocation(34, 9);
			char_literal10=(IToken)Match(input,12,Follow._12_in_function186);  
			stream_12.Add(char_literal10);

			DebugLocation(34, 13);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:34:13: ( formalParameter ( ',' formalParameter )* )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==20||LA4_0==22))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:34:15: formalParameter ( ',' formalParameter )*
				{
				DebugLocation(34, 15);
				PushFollow(Follow._formalParameter_in_function190);
				formalParameter11=formalParameter();
				PopFollow();

				stream_formalParameter.Add(formalParameter11.Tree);
				DebugLocation(34, 31);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:34:31: ( ',' formalParameter )*
				try { DebugEnterSubRule(3);
				while (true)
				{
					int alt3=2;
					try { DebugEnterDecision(3, false);
					int LA3_0 = input.LA(1);

					if ((LA3_0==16))
					{
						alt3 = 1;
					}


					} finally { DebugExitDecision(3); }
					switch ( alt3 )
					{
					case 1:
						DebugEnterAlt(1);
						// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:34:32: ',' formalParameter
						{
						DebugLocation(34, 32);
						char_literal12=(IToken)Match(input,16,Follow._16_in_function193);  
						stream_16.Add(char_literal12);

						DebugLocation(34, 36);
						PushFollow(Follow._formalParameter_in_function195);
						formalParameter13=formalParameter();
						PopFollow();

						stream_formalParameter.Add(formalParameter13.Tree);

						}
						break;

					default:
						goto loop3;
					}
				}

				loop3:
					;

				} finally { DebugExitSubRule(3); }


				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(34, 58);
			char_literal14=(IToken)Match(input,13,Follow._13_in_function203);  
			stream_13.Add(char_literal14);

			DebugLocation(35, 9);
			PushFollow(Follow._block_in_function213);
			block15=block();
			PopFollow();

			stream_block.Add(block15.Tree);


			{
			// AST REWRITE
			// elements: type, block, formalParameter, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 36:9: -> ^( FUNC type ID ( formalParameter )* block )
			{
				DebugLocation(36, 12);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:36:12: ^( FUNC type ID ( formalParameter )* block )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(36, 14);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(FUNC, "FUNC"), root_1);

				DebugLocation(36, 19);
				adaptor.AddChild(root_1, stream_type.NextTree());
				DebugLocation(36, 24);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(36, 27);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:36:27: ( formalParameter )*
				while ( stream_formalParameter.HasNext )
				{
					DebugLocation(36, 27);
					adaptor.AddChild(root_1, stream_formalParameter.NextTree());

				}
				stream_formalParameter.Reset();
				DebugLocation(36, 44);
				adaptor.AddChild(root_1, stream_block.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("function", 5);
			LeaveRule("function", 5);
			LeaveRule_function();
		}
		DebugLocation(37, 4);
		} finally { DebugExitRule(GrammarFileName, "function"); }
		return retval;

	}
	// $ANTLR end "function"

	partial void EnterRule_formalParameter();
	partial void LeaveRule_formalParameter();

	// $ANTLR start "formalParameter"
	// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:39:1: formalParameter : type ID -> ^( ARG type ID ) ;
	[GrammarRule("formalParameter")]
	private AstParserRuleReturnScope<object, IToken> formalParameter()
	{
		EnterRule_formalParameter();
		EnterRule("formalParameter", 6);
		TraceIn("formalParameter", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken ID17 = default(IToken);
		AstParserRuleReturnScope<object, IToken> type16 = default(AstParserRuleReturnScope<object, IToken>);

		object ID17_tree = default(object);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		try { DebugEnterRule(GrammarFileName, "formalParameter");
		DebugLocation(39, 4);
		try
		{
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:40:5: ( type ID -> ^( ARG type ID ) )
			DebugEnterAlt(1);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:40:9: type ID
			{
			DebugLocation(40, 9);
			PushFollow(Follow._type_in_formalParameter255);
			type16=type();
			PopFollow();

			stream_type.Add(type16.Tree);
			DebugLocation(40, 14);
			ID17=(IToken)Match(input,ID,Follow._ID_in_formalParameter257);  
			stream_ID.Add(ID17);



			{
			// AST REWRITE
			// elements: type, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 40:17: -> ^( ARG type ID )
			{
				DebugLocation(40, 20);
				// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:40:20: ^( ARG type ID )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(40, 22);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ARG, "ARG"), root_1);

				DebugLocation(40, 26);
				adaptor.AddChild(root_1, stream_type.NextTree());
				DebugLocation(40, 31);
				adaptor.AddChild(root_1, stream_ID.NextNode());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("formalParameter", 6);
			LeaveRule("formalParameter", 6);
			LeaveRule_formalParameter();
		}
		DebugLocation(41, 4);
		} finally { DebugExitRule(GrammarFileName, "formalParameter"); }
		return retval;

	}
	// $ANTLR end "formalParameter"

	partial void EnterRule_block();
	partial void LeaveRule_block();

	// $ANTLR start "block"
	// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:44:1: block : lc= '{' ( variable )* ( stat )* '}' -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* ) ;
	[GrammarRule("block")]
	private AstParserRuleReturnScope<object, IToken> block()
	{
		EnterRule_block();
		EnterRule("block", 7);
		TraceIn("block", 7);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken lc = default(IToken);
		IToken char_literal20 = default(IToken);
		AstParserRuleReturnScope<object, IToken> variable18 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> stat19 = default(AstParserRuleReturnScope<object, IToken>);

		object lc_tree = default(object);
		object char_literal20_tree = default(object);
		RewriteRuleITokenStream stream_23=new RewriteRuleITokenStream(adaptor,"token 23");
		RewriteRuleITokenStream stream_24=new RewriteRuleITokenStream(adaptor,"token 24");
		RewriteRuleSubtreeStream stream_variable=new RewriteRuleSubtreeStream(adaptor,"rule variable");
		RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(44, 4);
		try
		{
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:45:5: (lc= '{' ( variable )* ( stat )* '}' -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* ) )
			DebugEnterAlt(1);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:45:9: lc= '{' ( variable )* ( stat )* '}'
			{
			DebugLocation(45, 11);
			lc=(IToken)Match(input,23,Follow._23_in_block289);  
			stream_23.Add(lc);

			DebugLocation(45, 16);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:45:16: ( variable )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_0 = input.LA(1);

				if ((LA5_0==20||LA5_0==22))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:45:16: variable
					{
					DebugLocation(45, 16);
					PushFollow(Follow._variable_in_block291);
					variable18=variable();
					PopFollow();

					stream_variable.Add(variable18.Tree);

					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }

			DebugLocation(45, 26);
			// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:45:26: ( stat )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_0 = input.LA(1);

				if (((LA6_0>=ID && LA6_0<=INT)||LA6_0==12||LA6_0==17||LA6_0==21||LA6_0==23))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Dev\\Git\\ANTLR-Lab\\src\\TreeGrammar\\CMinus.g:45:26: stat
					{
					DebugLocation(45, 26);
					PushFollow(Follow._stat_in_block294);
					stat19=stat();
					PopFollow();

					stream_stat.Add(stat19.Tree);

					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }

			DebugLocation(45, 32);
			char_literal20=(IToken)Match(input,24,Follow._24_in_block297);  
			stream_24.Add(char_literal20);



			{
			// AST REWRITE
			// elements: variable, stat
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
